[gd_scene load_steps=9 format=3 uid="uid://sqlonw8gtwb0"]

[ext_resource type="Script" uid="uid://utwfpjnrsosa" path="res://src/environment/spring/spring.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://thxbew43xeci" path="res://assets/sounds/effects/bounce/bounce_01.ogg" id="3"]

[sub_resource type="CylinderMesh" id="12"]
resource_local_to_scene = true
top_radius = 2.5
bottom_radius = 2.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n82fi"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_alyuv"]
height = 3.064
radius = 3.16

[sub_resource type="Animation" id="11"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:top_radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="10"]
resource_name = "shrink_and_expand"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:top_radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0396161, 0.0966694, 0.15536, 0.216534, 0.287002, 0.343333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [2.5, 2.15, 3.0, 2.25, 2.6, 2.4, 2.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0396155, 0.0967336, 0.155354, 0.216574, 0.2869, 0.343427),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [2.0, 1.5, 2.2, 1.9, 2.05, 1.95, 2.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0396484, 0.0966753, 0.1554, 0.216742, 0.287064, 0.343348),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.257743, 0), Vector3(0, 0, 0), Vector3(0, -0.0501888, 0), Vector3(0, 0, 0), Vector3(0, -0.029, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oayhg"]
_data = {
&"RESET": SubResource("11"),
&"shrink_and_expand": SubResource("10")
}

[node name="Spring" type="Node3D"]
script = ExtResource("2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("12")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_n82fi")

[node name="SpringTrigger" type="Area3D" parent="."]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpringTrigger"]
shape = SubResource("CylinderShape3D_alyuv")

[node name="BounceSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")
volume_db = -25.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oayhg")
}

[connection signal="body_entered" from="SpringTrigger" to="." method="_on_spring_trigger_body_entered"]
[connection signal="body_exited" from="SpringTrigger" to="." method="_on_spring_trigger_body_exited"]
